--- a/project_4/html/index.html
+++ b/project_4/html/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <link rel="stylesheet" href="project_4/css/styles.css" type="text/css">
 
 </head>
 
@@ -36,5 +36,5 @@
     </footer>
     
 </body>
-<script type="text/javascript" src=js/main.js></script>
+<script type="text/javascript" src=project_4/js/main.js></script>
 </html>
