--- a/project_2/html/index.html
+++ b/project_2/html/index.html
@@ -5,14 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inspector Clouseau</title>
+
+    <!-- STYLE SHEETS -->
     <link rel="stylesheet" href="css/styles.css" type="text/css">
 </head>
 
 <body onresize="reDisplay()">
+
+<!-- HEADER -->
     <header>
-        <h1></h1>
-        <h2></h2>
+        <img src="images/clouseau.jpg" alt="">
     </header>
+
+<!-- MAIN -->
     <main>
         <h1>Inspector Clouseau</h1>
         <h2>What I learned</h2>
@@ -28,6 +33,7 @@
         <p id="myDocument"></p>
     </main>
 
+<!-- FOOTER -->
         <footer>
             <p>Assignment</p>
         </footer>
