--- a/project_2/html/index.html
+++ b/project_2/html/index.html
@@ -14,12 +14,13 @@
 
 <!-- HEADER -->
     <header>
-        <img src="images/clouseau.jpg" alt="">
+        <img src="images/clouseau.jpg" alt="clouseau">
     </header>
 
 <!-- MAIN -->
     <main>
         <h1>Inspector Clouseau</h1>
+
         <h2>What I learned</h2>
         <ul class="objectives">
             <li>Display Window Properties</li>
@@ -30,12 +31,13 @@
         <p id="myWindow"></p>
 
         <h2>Document Properties</h2>
+        <p>Document title is 02 Inspector Clousea</p>
         <p id="myDocument"></p>
     </main>
 
 <!-- FOOTER -->
         <footer>
-            <p>Assignment</p>
+            <p>Jordan Taylor</p>
         </footer>
         </body>
         <script type="text/javascript" src=js/main.js></script>
